# arewemeantoday

./: Cargo.toml  LICENSE  Procfile  README.md
.github/workflows/: rust.yml
src/: main.rs
static/: mean.html  not_mean.html
