[package]
name = "arewemeantoday"
version = "0.1.0"
authors = ["lesnyrumcajs <lesny.rumcajs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_contrib = "0.4"
digest = "0.8.1"
sha2 = "0.8.1"
chrono = "0.4"